--- a/.github/workflows/fetch.yml
+++ b/.github/workflows/fetch.yml
@@ -5,6 +5,8 @@ on:
     branches:
       - main
   pull_request:
+    branches:
+      - main
     paths:
       - "**.js"
       - "package.json"
@@ -20,40 +22,24 @@ jobs:
           - macOS-latest
         node:
           - 14
-          - 12
-          - engines
+          - 15
         project:
           - fetch
         exclude:
-          # On Windows, run tests with only the LTS environments.
           - os: windows-latest
-            node: engines
-          - os: windows-latest
-            node: "14"
+            node: "15"
           # On macOS, run tests with only the LTS environments.
           - os: macOS-latest
-            node: engines
-          - os: macOS-latest
-            node: "14"
+            node: "15"
 
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v2
 
-      - name: Get Node.JS version from package.json
-        if: matrix.node == 'engines'
-        id: get-version
-        run: echo ::set-output name=node::$(npx --q minimum-node-version)
-
-      - uses: actions/setup-node@v2-beta
-        if: matrix.node != 'engines'
+      - name: Setup node
+        uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node }}
-
-      - uses: actions/setup-node@v2-beta
-        if: matrix.node == 'engines'
-        with:
-          node-version: ${{steps.get-version.outputs.node}}
 
       - name: Restore yarn cache
         id: yarn-cache-dir-path
@@ -67,20 +53,54 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-yarn-
 
-      - run: yarn install
+      - name: Install dependencies
+        run: yarn install
 
+      - name: Test
       - run: yarn --cwd ${{matrix.project}} test -- --colors
-        if: matrix.node != 'engines'
-
-      - name: Test without coverage
-        if: matrix.node == 'engines'
-        run: |
-          yarn add esm
-          npx mocha --prefix ${{matrix.project}} -r esm --colors
 
       # upload coverage only once
       - name: Coveralls
         uses: coverallsapp/github-action@master
-        if: matrix.node == '12' && matrix.os == 'ubuntu-latest'
+        if: matrix.node == '14' && matrix.os == 'ubuntu-latest'
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
+
+  publish:
+    name: Publish
+    needs:
+      - test
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        project:
+          - fetch
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Restore yarn cache
+        id: yarn-cache-dir-path
+        run: echo "::set-output name=dir::$(yarn cache dir)"
+
+      - uses: actions/cache@v2
+        id: yarn-cache
+        with:
+          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
+          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-yarn-
+
+      - name: Install
+        run: yarn install
+
+      - name: Build
+        run: yarn --cwd ${{matrix.project}} build
+
+      - name: Publish
+        uses: mikeal/merge-release@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NPM_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
+          DEPLOY_DIR: ${{matrix.project}}
+          SRC_PACKAGE_DIR: ${{matrix.project}}
