--- a/.github/workflows/blob.yml
+++ b/.github/workflows/blob.yml
@@ -4,10 +4,14 @@ on:
   push:
     branches:
       - main
+    paths:
+      - "blob/**"
   pull_request:
     branches:
-      - "**"
-
+      - main
+    paths:
+      - "blob/**"
+      - ".github/workflows/blob.yml"
 jobs:
   check:
     name: Typecheck
@@ -119,7 +123,6 @@ jobs:
             ${{ runner.os }}-yarn-
 
       - name: Install
-        if: steps.yarn-cache.outputs.cache-hit != 'true'
         run: yarn install
 
       - name: Build
