--- a/file/package.json
+++ b/file/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@web-std/file",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Web API compatible File implementation for node",
   "keywords": [
     "file",
@@ -13,14 +13,11 @@
   "main": "./dist/src/lib.cjs",
   "exports": {
     ".": {
-      "import": "./src/lib.js",
-      "require": "./dist/src/lib.cjs"
+      "require": "./dist/src/lib.node.cjs",
+      "node": "./src/lib.node.js"
     }
   },
-  "browser": {
-    "./src/lib.js": "./src/lib.web.js"
-  },
-  "types": "./src/lib.d.ts",
+  "types": "./dist/src/lib.d.ts",
   "dependencies": {
     "@web-std/blob": "2.0.0"
   },
@@ -29,10 +26,10 @@
   "license": "MIT",
   "devDependencies": {
     "@types/node": "14.0.23",
+    "@web-std/fetch": "1.0.0",
     "git-validate": "2.2.4",
     "husky": "^4.2.5",
     "lint-staged": "^10.2.11",
-    "@web-std/fetch": "1.0.0",
     "playwright-test": "2.1.0",
     "prettier": "^2.2.1",
     "rimraf": "3.0.2",
