--- a/fetch/package.json
+++ b/fetch/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@web-std/fetch",
+  "name": "@web-std/node-fetch",
   "version": "1.0.0",
   "description": "A light-weight module that brings Fetch API to node.js",
   "main": "./dist/index.cjs",
@@ -56,7 +56,7 @@
   },
   "devDependencies": {
     "abort-controller": "^3.0.0",
-    "abortcontroller-polyfill": "^1.5.0",
+    "abortcontroller-polyfill": "^1.7.1",
     "busboy": "^0.3.1",
     "c8": "^7.3.0",
     "chai": "^4.2.0",
