--- a/fetch/package.json
+++ b/fetch/package.json
@@ -32,7 +32,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/node-fetch/node-fetch.git"
+    "url": "https://github.com/web-std/io.git"
   },
   "keywords": [
     "fetch",
