--- a/blob/package.json
+++ b/blob/package.json
@@ -11,9 +11,9 @@
   "main": "./dist/src/lib.node.cjs",
   "exports": {
     ".": {
+      "browser": "./src/lib.js",
       "require": "./dist/src/lib.node.cjs",
-      "node": "./src/lib.node.js",
-      "browser": "./src/lib.js"
+      "node": "./src/lib.node.js"
     }
   },
   "types": "./dist/src/lib.d.ts",
