--- a/.github/workflows/fetch.yml
+++ b/.github/workflows/fetch.yml
@@ -14,6 +14,31 @@ on:
       - ".github/workflows/fetch.yml"
 
 jobs:
+  check:
+    name: Typecheck
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version:
+          - 16
+        project:
+          - fetch
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Setup node ${{ matrix.node-version }}
+        uses: actions/setup-node@v2
+        with:
+          node-version: ${{ matrix.node-version }}
+
+      - name: Install
+        uses: bahmutov/npm-install@v1
+
+      - name: Typecheck
+        uses: gozala/typescript-error-reporter-action@v1.0.8
+        with:
+          project: ${{matrix.project}}/tsconfig.json
+
   test:
     name: Test
     runs-on: ${{ matrix.os }}
@@ -22,7 +47,7 @@ jobs:
       matrix:
         node-version:
           - 14
-          - 15
+          - 16
         os:
           - ubuntu-latest
           - windows-latest
@@ -44,20 +69,8 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
 
-      - name: Restore yarn cache
-        id: yarn-cache-dir-path
-        run: echo "::set-output name=dir::$(yarn cache dir)"
-
-      - uses: actions/cache@v2
-        id: yarn-cache
-        with:
-          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
-          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-yarn-
-
-      - name: Install dependencies
-        run: yarn install
+      - name: Install
+        uses: bahmutov/npm-install@v1
 
       - name: Test
         run: yarn --cwd ${{matrix.project}} test -- --colors
@@ -81,20 +94,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Restore yarn cache
-        id: yarn-cache-dir-path
-        run: echo "::set-output name=dir::$(yarn cache dir)"
-
-      - uses: actions/cache@v2
-        id: yarn-cache
-        with:
-          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
-          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-yarn-
-
       - name: Install
-        run: yarn install
+        uses: bahmutov/npm-install@v1
 
       - name: Build
         run: yarn --cwd ${{matrix.project}} build
