--- a/fetch/package.json
+++ b/fetch/package.json
@@ -12,7 +12,23 @@
       "require": "./dist/index.cjs",
       "types": "./@types/index.d.ts"
     },
-    "./package.json": "./package.json"
+    "./package.json": "./package.json",
+    "./body": {
+      "import": "./src/body.js",
+      "types": "./@types/body.d.ts"
+    },
+    "./src/request.js": {
+      "import": "./src/request.js",
+      "types": "./@types/request.d.ts"
+    },
+    "./src/response.js": {
+      "import": "./src/response.js",
+      "types": "./@types/response.d.ts"
+    },
+    "./src/headers.js": {
+      "import": "./src/headers.js",
+      "types": "./@types/headers.d.ts"
+    }
   },
   "files": [
     "src",
@@ -29,7 +45,8 @@
     "coverage": "c8 report --reporter=text-lcov | coveralls",
     "typecheck": "tsc --build",
     "lint": "xo",
-    "prepublishOnly": "node ./test/commonjs/test-artifact.js && tsc --build"
+    "prepublishOnly": "node ./test/commonjs/test-artifact.js",
+    "prepare": "tsc --build"
   },
   "repository": {
     "type": "git",
