chore: reconfigure typescript refs

--- a/file/tsconfig.json
+++ b/file/tsconfig.json
@@ -5,7 +5,10 @@
   },
   "references": [
     {
-      "path": "../blob"
+      "path": "../blob",
+    },
+    {
+      "path": "../fetch"
     }
   ],
   "include": [
