--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
     "blob",
     "file",
     "form-data",
-    "fetch"
+    "fetch",
+    "stream"
   ],
   "scripts": {
+    "prepare": "yarn prepare:blob && yarn prepare:file && yarn prepare:form-data && yarn prepare:fetch",
     "prepare:blob": "yarn --cwd blob prepare",
     "prepare:file": "yarn --cwd file prepare",
     "prepare:form-data": "yarn --cwd form-data prepare",
