--- a/form-data/package.json
+++ b/form-data/package.json
@@ -21,8 +21,7 @@
   },
   "types": "./dist/src/lib.d.ts",
   "dependencies": {
-    "web-encoding": "1.1.5",
-    "web-streams-polyfill": "3.0.3"
+    "web-encoding": "1.1.5"
   },
   "author": "Irakli Gozalishvili <dev@gozala.io> (https://gozala.io)",
   "repository": "https://github.com/web-std/io",
@@ -35,13 +34,13 @@
     "git-validate": "2.2.4",
     "husky": "^6.0.0",
     "lint-staged": "^11.0.0",
-    "playwright-test": "3.0.7",
+    "playwright-test": "^7.2.0",
     "prettier": "^2.3.0",
     "rimraf": "3.0.2",
     "rollup": "2.47.0",
     "rollup-plugin-multi-input": "1.2.0",
-    "typescript": "^4.2.4",
-    "uvu": "0.5.1"
+    "typescript": "^4.4.4",
+    "uvu": "0.5.2"
   },
   "scripts": {
     "check": "tsc --build",
