--- a/stream/package.json
+++ b/stream/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "@web-std/file",
-  "version": "1.1.0",
-  "description": "Web API compatible File implementation for node",
+  "name": "@web-std/stream",
+  "version": "1.0.0",
+  "description": "Web API compatible streams for node/web",
   "keywords": [
-    "file",
-    "blob",
-    "typed",
+    "web-stream",
+    "whatwg-stream",
+    "stream",
     "typescript"
   ],
   "type": "module",
@@ -17,41 +17,32 @@
   "exports": {
     ".": {
       "browser": "./src/lib.js",
-      "require": "./dist/src/lib.node.cjs",
-      "node": "./src/lib.node.js"
+      "require": "./src/lib.node.cjs",
+      "node": "./src/lib.node.js",
+      "types": "./src/lib.d.ts"
     }
   },
-  "types": "./dist/src/lib.d.ts",
-  "dependencies": {
-    "@web-std/blob": "^2.1.0"
-  },
+  "types": "./src/lib.d.ts",
   "author": "Irakli Gozalishvili <dev@gozala.io> (https://gozala.io)",
   "repository": "https://github.com/web-std/io",
   "license": "MIT",
   "devDependencies": {
     "@types/node": "15.0.2",
-    "@web-std/fetch": "^2.0.0",
     "git-validate": "2.2.4",
     "husky": "^6.0.0",
     "lint-staged": "^11.0.0",
     "playwright-test": "^7.2.0",
     "prettier": "^2.3.0",
     "rimraf": "3.0.2",
-    "rollup": "2.47.0",
-    "rollup-plugin-multi-input": "1.2.0",
     "typescript": "^4.4.4",
-    "uvu": "0.5.2"
+    "uvu": "^0.5.2"
   },
   "scripts": {
-    "check": "tsc --build",
-    "build": "npm run build:cjs && npm run build:types",
-    "build:cjs": "rollup --config rollup.config.js",
-    "build:types": "tsc --build",
-    "prepare": "npm run build",
+    "typecheck": "tsc --build",
     "test:es": "uvu test all.spec.js",
     "test:web": "playwright-test -r uvu test/web.spec.js",
-    "test:cjs": "rimraf dist && npm run build && node dist/test/web.spec.cjs",
-    "test": "npm run test:es && npm run test:cjs",
+    "test:cjs": "node test/node.spec.cjs",
+    "test": "npm run test:es && npm run test:cjs && npm run test:web",
     "precommit": "lint-staged"
   },
   "lint-staged": {
