--- a/stream/package.json
+++ b/stream/package.json
@@ -26,6 +26,9 @@
   "author": "Irakli Gozalishvili <dev@gozala.io> (https://gozala.io)",
   "repository": "https://github.com/web-std/io",
   "license": "MIT",
+  "dependencies": {
+    "web-streams-polyfill": "^3.1.1"
+  },
   "devDependencies": {
     "@types/node": "15.0.2",
     "git-validate": "2.2.4",
