--- a/file/package.json
+++ b/file/package.json
@@ -39,7 +39,7 @@
     "rimraf": "3.0.2",
     "rollup": "2.47.0",
     "rollup-plugin-multi-input": "1.2.0",
-    "typescript": "^4.4.4",
+    "typescript": "^4.5.1-rc",
     "uvu": "0.5.2"
   },
   "scripts": {
@@ -51,7 +51,7 @@
     "test:es": "uvu test all.spec.js",
     "test:web": "playwright-test -r uvu test/web.spec.js",
     "test:cjs": "rimraf dist && npm run build && node dist/test/web.spec.cjs",
-    "test": "npm run test:es && npm run test:cjs",
+    "test": "npm run test:es && npm run test:web && npm run test:cjs",
     "precommit": "lint-staged"
   },
   "lint-staged": {
