--- a/form-data/package.json
+++ b/form-data/package.json
@@ -16,7 +16,7 @@
     ".": {
       "browser": "./src/lib.js",
       "require": "./dist/src/lib.node.cjs",
-      "node": "./src/lib.node.js"
+      "import": "./src/lib.node.js"
     }
   },
   "types": "./dist/src/lib.d.ts",
@@ -50,7 +50,7 @@
     "prepare": "npm run build",
     "test:es": "uvu test all.spec.js",
     "test:web": "playwright-test -r uvu test/web.spec.js",
-    "test:cjs": "rimraf dist && npm run build && node dist/test/web.spec.cjs",
+    "test:cjs": "rimraf dist && npm run build && node dist/test/all.spec.cjs",
     "test": "npm run test:es && npm run test:cjs",
     "precommit": "lint-staged"
   },
