--- a/form-data/tsconfig.json
+++ b/form-data/tsconfig.json
@@ -2,6 +2,9 @@
   "extends": "../tsconfig.json",
   "compilerOptions": {
     "outDir": "dist",
+    "paths": {
+      "@web-std/form-data": ["form-data/src/lib.js"]
+    }
   },
   "references": [
     {
@@ -12,7 +15,7 @@
     }
   ],
   "include": [
-    "src/**/*.js",
-    "test/**/*.js"
+    "src",
+    "test"
   ]
 }
