--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,23 +27,7 @@
     // "rootDir": "./",                                  /* Specify the root folder within your source files. */
     "moduleResolution": "node", /* Specify how TypeScript looks up a file from a given module specifier. */
     "baseUrl": "./",
-    "paths": {
-      "@web-std/blob": [
-        "./blob/src/lib.web.js"
-      ],
-      "@web-std/file": [
-        "./file/src/lib.node.js"
-      ],
-      "@web-std/form-data": [
-        "./form-data/src/lib.node.js"
-      ],
-      "@web-std/fetch": [
-        "./fetch/src/index.js"
-      ],
-      "@web-std/stream": [
-        "./stream/src/lib.d.ts"
-      ]
-    }, /* Specify a set of entries that re-map imports to additional lookup locations. */
+    "paths": {}, /* Specify a set of entries that re-map imports to additional lookup locations. */
 
     // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
     // "typeRoots": [],                                  /* Specify multiple folders that act like `./node_modules/@types`. */
