--- a/.github/workflows/file.yml
+++ b/.github/workflows/file.yml
@@ -30,20 +30,8 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
 
-      - name: Restore yarn cache
-        id: yarn-cache-dir-path
-        run: echo "::set-output name=dir::$(yarn cache dir)"
-
-      - uses: actions/cache@v2
-        id: yarn-cache
-        with:
-          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
-          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-yarn-
-
       - name: Install dependencies
-        run: yarn install
+        uses: bahmutov/npm-install@v1
 
       - name: Typecheck
         uses: gozala/typescript-error-reporter-action@v1.0.8
@@ -73,20 +61,8 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
 
-      - name: Restore yarn cache
-        id: yarn-cache-dir-path
-        run: echo "::set-output name=dir::$(yarn cache dir)"
-
-      - uses: actions/cache@v2
-        id: yarn-cache
-        with:
-          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
-          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-yarn-
-
       - name: Install dependencies
-        run: yarn install
+        uses: bahmutov/npm-install@v1
 
       - name: Test (ES)
         run: yarn --cwd ${{matrix.project}} test:es
@@ -110,20 +86,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Restore yarn cache
-        id: yarn-cache-dir-path
-        run: echo "::set-output name=dir::$(yarn cache dir)"
-
-      - uses: actions/cache@v2
-        id: yarn-cache
-        with:
-          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
-          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-yarn-
-
-      - name: Install
-        run: yarn install
+      - name: Install dependencies
+        uses: bahmutov/npm-install@v1
 
       - name: Build
         run: yarn --cwd ${{matrix.project}} build
