chore: simplify tsconfig

--- a/stream/tsconfig.json
+++ b/stream/tsconfig.json
@@ -6,8 +6,7 @@
     "outDir": "dist"
   },
   "include": [
-    "src/**/*.js",
-    "test/**/*.js",
-    "test/test.cjs"
+    "src",
+    "test",
   ]
 }
