--- a/file/package.json
+++ b/file/package.json
@@ -39,7 +39,7 @@
     "rimraf": "3.0.2",
     "rollup": "2.47.0",
     "rollup-plugin-multi-input": "1.2.0",
-    "typescript": "^4.5.1-rc",
+    "typescript": "^4.4.4",
     "uvu": "0.5.2"
   },
   "scripts": {
