chore: reveal issues in cjs runtime

--- a/blob/package.json
+++ b/blob/package.json
@@ -46,7 +46,7 @@
     "prepare": "npm run build",
     "test:es": "uvu test all.spec.js",
     "test:web": "playwright-test -r uvu test/web.spec.js",
-    "test:cjs": "rimraf dist && npm run build && node dist/test/web.spec.cjs",
+    "test:cjs": "rimraf dist && npm run build && node dist/test/all.spec.cjs",
     "test": "npm run test:es && npm run test:cjs",
     "precommit": "lint-staged"
   },
