--- a/.github/workflows/fetch.yml
+++ b/.github/workflows/fetch.yml
@@ -72,7 +72,7 @@ jobs:
       - name: Install
         uses: bahmutov/npm-install@v1
 
-      - name: Test
+      - name: Test (ESM)
         run: yarn --cwd ${{matrix.project}} test -- --colors
 
       # upload coverage only once
@@ -81,6 +81,9 @@ jobs:
         if: matrix.node == '14' && matrix.os == 'ubuntu-latest'
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Test (CJS)
+        run: yarn --cwd ${{matrix.project}} test:cjs
   publish:
     name: Publish
     needs:
