--- a/fetch/package.json
+++ b/fetch/package.json
@@ -24,12 +24,15 @@
     "node": "^10.17 || >=12.3"
   },
   "scripts": {
-    "build": "rollup -c",
+    "build": "npm run build:cjs && npm run build:types",
     "test": "node --experimental-modules ../node_modules/c8/bin/c8 --reporter=html --reporter=lcov --reporter=text --check-coverage node --experimental-modules ../node_modules/mocha/bin/mocha",
+    "test:cjs": "node ./test/commonjs/test-artifact.js",
     "coverage": "c8 report --reporter=text-lcov | coveralls",
     "typecheck": "tsc --build",
+    "build:types": "tsc --build",
+    "build:cjs": "rollup -c",
     "lint": "xo",
-    "prepublishOnly": "node ./test/commonjs/test-artifact.js && tsc --build"
+    "prepare": "npm run build"
   },
   "repository": {
     "type": "git",
@@ -76,7 +79,7 @@
     "@web-std/form-data": "^2.1.0",
     "data-uri-to-buffer": "^3.0.1",
     "web-streams-polyfill": "^3.1.1",
-    "@ssttevee/multipart-parser": "^0.1.9"
+    "@web3-storage/multipart-parser": "^1.0.0"
   },
   "esm": {
     "sourceMap": true,
