fix: ship less files to address TSC issues
Users have been running into issues caused by shipping the tsconfig.json in the package.

--- a/packages/blob/package.json
+++ b/packages/blob/package.json
@@ -6,6 +6,12 @@
     "blob",
     "typed"
   ],
+  "files": [
+    "src",
+    "dist/src",
+    "License.md",
+    "Readme.md"
+  ],
   "type": "module",
   "module": "./src/lib.js",
   "main": "./dist/src/lib.node.cjs",
