--- a/packages/file/package.json
+++ b/packages/file/package.json
@@ -2,6 +2,12 @@
   "name": "@web-std/file",
   "version": "3.0.0",
   "description": "Web API compatible File implementation for node",
+  "files": [
+    "src",
+    "dist/src",
+    "License.md",
+    "Readme.md"
+  ],
   "keywords": [
     "file",
     "blob",
