--- a/packages/form-data/package.json
+++ b/packages/form-data/package.json
@@ -2,6 +2,12 @@
   "name": "@web-std/form-data",
   "version": "3.0.0",
   "description": "Web API compatible Form Data implementation",
+  "files": [
+    "src",
+    "dist/src",
+    "License.md",
+    "Readme.md"
+  ],
   "keywords": [
     "formdata",
     "typed"
