--- a/packages/fetch/package.json
+++ b/packages/fetch/package.json
@@ -99,6 +99,7 @@
   "dependencies": {
     "@web-std/blob": "^3.0.3",
     "@web-std/form-data": "^3.0.2",
+    "@web-std/stream": "^1.0.1",
     "data-uri-to-buffer": "^3.0.1",
     "mrmime": "^1.0.0",
     "@web3-storage/multipart-parser": "^1.0.0"
