--- a/packages/fetch/package.json
+++ b/packages/fetch/package.json
@@ -92,7 +92,7 @@
     "formdata-node": "^2.4.0",
     "mocha": "^8.1.3",
     "p-timeout": "^3.2.0",
-    "rollup": "^2.26.10",
+    "rollup": "2.47.0",
     "tsd": "^0.13.1",
     "typescript": "^4.4.4",
     "xo": "^0.33.1"
