--- a/packages/form-data/package.json
+++ b/packages/form-data/package.json
@@ -34,10 +34,10 @@
   "repository": "https://github.com/web-std/io",
   "license": "MIT",
   "devDependencies": {
+    "@remix-run/web-blob": "^3.0.4",
+    "@remix-run/web-fetch": "^4.1.1",
+    "@remix-run/web-file": "^3.0.2",
     "@types/node": "15.0.2",
-    "@web-std/blob": "^3.0.0",
-    "@web-std/fetch": "^3.0.0",
-    "@web-std/file": "^3.0.0",
     "git-validate": "2.2.4",
     "husky": "^6.0.0",
     "lint-staged": "^11.0.0",
